eudasm/eudasm/eudc.output
State 46 conflicts: 1 shift/reduce
State 50 conflicts: 3 shift/reduce
State 51 conflicts: 3 shift/reduce
State 52 conflicts: 3 shift/reduce
State 53 conflicts: 3 shift/reduce
State 56 conflicts: 3 shift/reduce
State 90 conflicts: 3 shift/reduce
State 91 conflicts: 3 shift/reduce
State 92 conflicts: 3 shift/reduce
State 93 conflicts: 3 shift/reduce
State 94 conflicts: 3 shift/reduce
State 95 conflicts: 3 shift/reduce
State 96 conflicts: 3 shift/reduce
State 97 conflicts: 3 shift/reduce
State 98 conflicts: 3 shift/reduce
State 99 conflicts: 3 shift/reduce
State 100 conflicts: 3 shift/reduce
State 101 conflicts: 3 shift/reduce
State 102 conflicts: 3 shift/reduce
State 103 conflicts: 3 shift/reduce
State 117 conflicts: 1 shift/reduce
State 128 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement

    2 statement: fdecl_statement
    3          | fdef_statement
    4          | vdef_statement
    5          | if_statement
    6          | for_statement
    7          | while_statement
    8          | continue_statement
    9          | break_statement
   10          | yield_statement
   11          | return_statement
   12          | expr_statement
   13          | blank_statement
   14          | '{' statement_list '}'

   15 statement_list: statement_list statement
   16               | statement

   17 exprlist: NAME
   18         | INTEGER
   19         | STRING
   20         | exprlist ',' exprlist
   21         | exprlist '[' exprlist ']'
   22         | exprlist '(' exprlist ')'
   23         | '+' exprlist
   24         | '-' exprlist
   25         | '!' exprlist
   26         | INCR exprlist
   27         | DECR exprlist
   28         | exprlist INCR
   29         | exprlist DECR
   30         | exprlist '+' exprlist
   31         | exprlist '-' exprlist
   32         | exprlist '<' exprlist
   33         | exprlist LE exprlist
   34         | exprlist '>' exprlist
   35         | exprlist GE exprlist
   36         | exprlist EQ exprlist
   37         | exprlist NE exprlist
   38         | exprlist AND exprlist
   39         | exprlist OR exprlist
   40         | exprlist '=' exprlist
   41         | exprlist ADDMOV exprlist
   42         | exprlist SUBMOV exprlist

   43 fdecl_statement: FDECL NAME '(' fdecl_varlist ')' ';'

   44 fdef_statement: FDEF NAME '(' fdecl_varlist ')' statement

   45 fdecl_varlist: fdecl_varlist_nonempty
   46              | /* empty */

   47 fdecl_varlist_nonempty: fdecl_varlist_nonempty ',' fdecl_varlist_single
   48                       | fdecl_varlist_single

   49 fdecl_varlist_single: VAR NAME
   50                     | ARRAY NAME

   51 vdef_statement: VDEF vdef_varlist ';'

   52 vdef_varlist: vdef_varlist ',' vdef_varlist_single
   53             | vdef_varlist_single

   54 vdef_varlist_single: NAME
   55                    | NAME '[' exprlist ']'

   56 if_statement: IF '(' exprlist ')' statement
   57             | IF '(' exprlist ')' statement ELSE statement

   58 for_statement: FOR '(' forexpr ';' forexpr ';' forexpr ')' statement

   59 forexpr: exprlist
   60        | /* empty */

   61 while_statement: WHILE '(' exprlist ')' statement

   62 return_statement: RETURN return_exprlist ';'

   63 return_exprlist: return_exprlist_nonempty
   64                | /* empty */

   65 return_exprlist_nonempty: return_exprlist_nonempty ',' exprlist
   66                         | exprlist

   67 continue_statement: CONTINUE ';'

   68 break_statement: BREAK ';'

   69 yield_statement: YIELD ';'

   70 expr_statement: exprlist ';'

   71 blank_statement: ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 25
'(' (40) 22 43 44 56 57 58 61
')' (41) 22 43 44 56 57 58 61
'+' (43) 23 30
',' (44) 20 47 52 65
'-' (45) 24 31
';' (59) 43 51 58 62 67 68 69 70 71
'<' (60) 32
'=' (61) 40
'>' (62) 34
'[' (91) 21 55
']' (93) 21 55
'{' (123) 14
'}' (125) 14
error (256)
NAME (258) 17 43 44 49 50 54 55
INTEGER (259) 18
STRING (260) 19
LE (261) 33
GE (262) 35
EQ (263) 36
NE (264) 37
AND (265) 38
OR (266) 39
ADDMOV (267) 41
SUBMOV (268) 42
FDEF (269) 44
FDECL (270) 43
VDEF (271) 51
VAR (272) 49
ARRAY (273) 50
FOR (274) 58
WHILE (275) 61
IF (276) 56 57
ELSE (277) 57
CONTINUE (278) 67
BREAK (279) 68
RETURN (280) 62
YIELD (281) 69
CONCAT (282)
DECR (283) 27 29
INCR (284) 26 28
MONIC (285)
FUNCTIONCALL (286)
ARRSUBSCRIPT (287)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
statement (49)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14, on right: 1 15 16 44 56
    57 58 61
statement_list (50)
    on left: 15 16, on right: 14 15
exprlist (51)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42, on right: 20 21 22 23 24 25 26 27 28 29
    30 31 32 33 34 35 36 37 38 39 40 41 42 55 56 57 59 61 65 66 70
fdecl_statement (52)
    on left: 43, on right: 2
fdef_statement (53)
    on left: 44, on right: 3
fdecl_varlist (54)
    on left: 45 46, on right: 43 44
fdecl_varlist_nonempty (55)
    on left: 47 48, on right: 45 47
fdecl_varlist_single (56)
    on left: 49 50, on right: 47 48
vdef_statement (57)
    on left: 51, on right: 4
vdef_varlist (58)
    on left: 52 53, on right: 51 52
vdef_varlist_single (59)
    on left: 54 55, on right: 52 53
if_statement (60)
    on left: 56 57, on right: 5
for_statement (61)
    on left: 58, on right: 6
forexpr (62)
    on left: 59 60, on right: 58
while_statement (63)
    on left: 61, on right: 7
return_statement (64)
    on left: 62, on right: 11
return_exprlist (65)
    on left: 63 64, on right: 62
return_exprlist_nonempty (66)
    on left: 65 66, on right: 63 65
continue_statement (67)
    on left: 67, on right: 8
break_statement (68)
    on left: 68, on right: 9
yield_statement (69)
    on left: 69, on right: 10
expr_statement (70)
    on left: 70, on right: 12
blank_statement (71)
    on left: 71, on right: 13


state 0

    0 $accept: . program $end

    NAME      shift, and go to state 1
    INTEGER   shift, and go to state 2
    STRING    shift, and go to state 3
    FDEF      shift, and go to state 4
    FDECL     shift, and go to state 5
    VDEF      shift, and go to state 6
    FOR       shift, and go to state 7
    WHILE     shift, and go to state 8
    IF        shift, and go to state 9
    CONTINUE  shift, and go to state 10
    BREAK     shift, and go to state 11
    RETURN    shift, and go to state 12
    YIELD     shift, and go to state 13
    '+'       shift, and go to state 14
    '-'       shift, and go to state 15
    DECR      shift, and go to state 16
    INCR      shift, and go to state 17
    '{'       shift, and go to state 18
    '!'       shift, and go to state 19
    ';'       shift, and go to state 20

    program             go to state 21
    statement           go to state 22
    exprlist            go to state 23
    fdecl_statement     go to state 24
    fdef_statement      go to state 25
    vdef_statement      go to state 26
    if_statement        go to state 27
    for_statement       go to state 28
    while_statement     go to state 29
    return_statement    go to state 30
    continue_statement  go to state 31
    break_statement     go to state 32
    yield_statement     go to state 33
    expr_statement      go to state 34
    blank_statement     go to state 35


state 1

   17 exprlist: NAME .

    $default  reduce using rule 17 (exprlist)


state 2

   18 exprlist: INTEGER .

    $default  reduce using rule 18 (exprlist)


state 3

   19 exprlist: STRING .

    $default  reduce using rule 19 (exprlist)


state 4

   44 fdef_statement: FDEF . NAME '(' fdecl_varlist ')' statement

    NAME  shift, and go to state 36


state 5

   43 fdecl_statement: FDECL . NAME '(' fdecl_varlist ')' ';'

    NAME  shift, and go to state 37


state 6

   51 vdef_statement: VDEF . vdef_varlist ';'

    NAME  shift, and go to state 38

    vdef_varlist         go to state 39
    vdef_varlist_single  go to state 40


state 7

   58 for_statement: FOR . '(' forexpr ';' forexpr ';' forexpr ')' statement

    '('  shift, and go to state 41


state 8

   61 while_statement: WHILE . '(' exprlist ')' statement

    '('  shift, and go to state 42


state 9

   56 if_statement: IF . '(' exprlist ')' statement
   57             | IF . '(' exprlist ')' statement ELSE statement

    '('  shift, and go to state 43


state 10

   67 continue_statement: CONTINUE . ';'

    ';'  shift, and go to state 44


state 11

   68 break_statement: BREAK . ';'

    ';'  shift, and go to state 45


state 12

   62 return_statement: RETURN . return_exprlist ';'

    NAME     shift, and go to state 1
    INTEGER  shift, and go to state 2
    STRING   shift, and go to state 3
    '+'      shift, and go to state 14
    '-'      shift, and go to state 15
    DECR     shift, and go to state 16
    INCR     shift, and go to state 17
    '!'      shift, and go to state 19

    $default  reduce using rule 64 (return_exprlist)

    exprlist                  go to state 46
    return_exprlist           go to state 47
    return_exprlist_nonempty  go to state 48


state 13

   69 yield_statement: YIELD . ';'

    ';'  shift, and go to state 49


state 14

   23 exprlist: '+' . exprlist

    NAME     shift, and go to state 1
    INTEGER  shift, and go to state 2
    STRING   shift, and go to state 3
    '+'      shift, and go to state 14
    '-'      shift, and go to state 15
    DECR     shift, and go to state 16
    INCR     shift, and go to state 17
    '!'      shift, and go to state 19

    exprlist  go to state 50


state 15

   24 exprlist: '-' . exprlist

    NAME     shift, and go to state 1
    INTEGER  shift, and go to state 2
    STRING   shift, and go to state 3
    '+'      shift, and go to state 14
    '-'      shift, and go to state 15
    DECR     shift, and go to state 16
    INCR     shift, and go to state 17
    '!'      shift, and go to state 19

    exprlist  go to state 51


state 16

   27 exprlist: DECR . exprlist

    NAME     shift, and go to state 1
    INTEGER  shift, and go to state 2
    STRING   shift, and go to state 3
    '+'      shift, and go to state 14
    '-'      shift, and go to state 15
    DECR     shift, and go to state 16
    INCR     shift, and go to state 17
    '!'      shift, and go to state 19

    exprlist  go to state 52


state 17

   26 exprlist: INCR . exprlist

    NAME     shift, and go to state 1
    INTEGER  shift, and go to state 2
    STRING   shift, and go to state 3
    '+'      shift, and go to state 14
    '-'      shift, and go to state 15
    DECR     shift, and go to state 16
    INCR     shift, and go to state 17
    '!'      shift, and go to state 19

    exprlist  go to state 53


state 18

   14 statement: '{' . statement_list '}'

    NAME      shift, and go to state 1
    INTEGER   shift, and go to state 2
    STRING    shift, and go to state 3
    FDEF      shift, and go to state 4
    FDECL     shift, and go to state 5
    VDEF      shift, and go to state 6
    FOR       shift, and go to state 7
    WHILE     shift, and go to state 8
    IF        shift, and go to state 9
    CONTINUE  shift, and go to state 10
    BREAK     shift, and go to state 11
    RETURN    shift, and go to state 12
    YIELD     shift, and go to state 13
    '+'       shift, and go to state 14
    '-'       shift, and go to state 15
    DECR      shift, and go to state 16
    INCR      shift, and go to state 17
    '{'       shift, and go to state 18
    '!'       shift, and go to state 19
    ';'       shift, and go to state 20

    statement           go to state 54
    statement_list      go to state 55
    exprlist            go to state 23
    fdecl_statement     go to state 24
    fdef_statement      go to state 25
    vdef_statement      go to state 26
    if_statement        go to state 27
    for_statement       go to state 28
    while_statement     go to state 29
    return_statement    go to state 30
    continue_statement  go to state 31
    break_statement     go to state 32
    yield_statement     go to state 33
    expr_statement      go to state 34
    blank_statement     go to state 35


state 19

   25 exprlist: '!' . exprlist

    NAME     shift, and go to state 1
    INTEGER  shift, and go to state 2
    STRING   shift, and go to state 3
    '+'      shift, and go to state 14
    '-'      shift, and go to state 15
    DECR     shift, and go to state 16
    INCR     shift, and go to state 17
    '!'      shift, and go to state 19

    exprlist  go to state 56


state 20

   71 blank_statement: ';' .

    $default  reduce using rule 71 (blank_statement)


state 21

    0 $accept: program . $end

    $end  shift, and go to state 57


state 22

    1 program: statement .

    $default  reduce using rule 1 (program)


state 23

   20 exprlist: exprlist . ',' exprlist
   21         | exprlist . '[' exprlist ']'
   22         | exprlist . '(' exprlist ')'
   28         | exprlist . INCR
   29         | exprlist . DECR
   30         | exprlist . '+' exprlist
   31         | exprlist . '-' exprlist
   32         | exprlist . '<' exprlist
   33         | exprlist . LE exprlist
   34         | exprlist . '>' exprlist
   35         | exprlist . GE exprlist
   36         | exprlist . EQ exprlist
   37         | exprlist . NE exprlist
   38         | exprlist . AND exprlist
   39         | exprlist . OR exprlist
   40         | exprlist . '=' exprlist
   41         | exprlist . ADDMOV exprlist
   42         | exprlist . SUBMOV exprlist
   70 expr_statement: exprlist . ';'

    LE      shift, and go to state 58
    GE      shift, and go to state 59
    EQ      shift, and go to state 60
    NE      shift, and go to state 61
    AND     shift, and go to state 62
    OR      shift, and go to state 63
    ADDMOV  shift, and go to state 64
    SUBMOV  shift, and go to state 65
    '='     shift, and go to state 66
    '<'     shift, and go to state 67
    '>'     shift, and go to state 68
    '+'     shift, and go to state 69
    '-'     shift, and go to state 70
    DECR    shift, and go to state 71
    INCR    shift, and go to state 72
    ','     shift, and go to state 73
    '['     shift, and go to state 74
    '('     shift, and go to state 75
    ';'     shift, and go to state 76


state 24

    2 statement: fdecl_statement .

    $default  reduce using rule 2 (statement)


state 25

    3 statement: fdef_statement .

    $default  reduce using rule 3 (statement)


state 26

    4 statement: vdef_statement .

    $default  reduce using rule 4 (statement)


state 27

    5 statement: if_statement .

    $default  reduce using rule 5 (statement)


state 28

    6 statement: for_statement .

    $default  reduce using rule 6 (statement)


state 29

    7 statement: while_statement .

    $default  reduce using rule 7 (statement)


state 30

   11 statement: return_statement .

    $default  reduce using rule 11 (statement)


state 31

    8 statement: continue_statement .

    $default  reduce using rule 8 (statement)


state 32

    9 statement: break_statement .

    $default  reduce using rule 9 (statement)


state 33

   10 statement: yield_statement .

    $default  reduce using rule 10 (statement)


state 34

   12 statement: expr_statement .

    $default  reduce using rule 12 (statement)


state 35

   13 statement: blank_statement .

    $default  reduce using rule 13 (statement)


state 36

   44 fdef_statement: FDEF NAME . '(' fdecl_varlist ')' statement

    '('  shift, and go to state 77


state 37

   43 fdecl_statement: FDECL NAME . '(' fdecl_varlist ')' ';'

    '('  shift, and go to state 78


state 38

   54 vdef_varlist_single: NAME .
   55                    | NAME . '[' exprlist ']'

    '['  shift, and go to state 79

    $default  reduce using rule 54 (vdef_varlist_single)


state 39

   51 vdef_statement: VDEF vdef_varlist . ';'
   52 vdef_varlist: vdef_varlist . ',' vdef_varlist_single

    ','  shift, and go to state 80
    ';'  shift, and go to state 81


state 40

   53 vdef_varlist: vdef_varlist_single .

    $default  reduce using rule 53 (vdef_varlist)


state 41

   58 for_statement: FOR '(' . forexpr ';' forexpr ';' forexpr ')' statement

    NAME     shift, and go to state 1
    INTEGER  shift, and go to state 2
    STRING   shift, and go to state 3
    '+'      shift, and go to state 14
    '-'      shift, and go to state 15
    DECR     shift, and go to state 16
    INCR     shift, and go to state 17
    '!'      shift, and go to state 19

    $default  reduce using rule 60 (forexpr)

    exprlist  go to state 82
    forexpr   go to state 83


state 42

   61 while_statement: WHILE '(' . exprlist ')' statement

    NAME     shift, and go to state 1
    INTEGER  shift, and go to state 2
    STRING   shift, and go to state 3
    '+'      shift, and go to state 14
    '-'      shift, and go to state 15
    DECR     shift, and go to state 16
    INCR     shift, and go to state 17
    '!'      shift, and go to state 19

    exprlist  go to state 84


state 43

   56 if_statement: IF '(' . exprlist ')' statement
   57             | IF '(' . exprlist ')' statement ELSE statement

    NAME     shift, and go to state 1
    INTEGER  shift, and go to state 2
    STRING   shift, and go to state 3
    '+'      shift, and go to state 14
    '-'      shift, and go to state 15
    DECR     shift, and go to state 16
    INCR     shift, and go to state 17
    '!'      shift, and go to state 19

    exprlist  go to state 85


state 44

   67 continue_statement: CONTINUE ';' .

    $default  reduce using rule 67 (continue_statement)


state 45

   68 break_statement: BREAK ';' .

    $default  reduce using rule 68 (break_statement)


state 46

   20 exprlist: exprlist . ',' exprlist
   21         | exprlist . '[' exprlist ']'
   22         | exprlist . '(' exprlist ')'
   28         | exprlist . INCR
   29         | exprlist . DECR
   30         | exprlist . '+' exprlist
   31         | exprlist . '-' exprlist
   32         | exprlist . '<' exprlist
   33         | exprlist . LE exprlist
   34         | exprlist . '>' exprlist
   35         | exprlist . GE exprlist
   36         | exprlist . EQ exprlist
   37         | exprlist . NE exprlist
   38         | exprlist . AND exprlist
   39         | exprlist . OR exprlist
   40         | exprlist . '=' exprlist
   41         | exprlist . ADDMOV exprlist
   42         | exprlist . SUBMOV exprlist
   66 return_exprlist_nonempty: exprlist .

    LE      shift, and go to state 58
    GE      shift, and go to state 59
    EQ      shift, and go to state 60
    NE      shift, and go to state 61
    AND     shift, and go to state 62
    OR      shift, and go to state 63
    ADDMOV  shift, and go to state 64
    SUBMOV  shift, and go to state 65
    '='     shift, and go to state 66
    '<'     shift, and go to state 67
    '>'     shift, and go to state 68
    '+'     shift, and go to state 69
    '-'     shift, and go to state 70
    DECR    shift, and go to state 71
    INCR    shift, and go to state 72
    ','     shift, and go to state 73
    '['     shift, and go to state 74
    '('     shift, and go to state 75

    ','       [reduce using rule 66 (return_exprlist_nonempty)]
    $default  reduce using rule 66 (return_exprlist_nonempty)


state 47

   62 return_statement: RETURN return_exprlist . ';'

    ';'  shift, and go to state 86


state 48

   63 return_exprlist: return_exprlist_nonempty .
   65 return_exprlist_nonempty: return_exprlist_nonempty . ',' exprlist

    ','  shift, and go to state 87

    $default  reduce using rule 63 (return_exprlist)


state 49

   69 yield_statement: YIELD ';' .

    $default  reduce using rule 69 (yield_statement)


state 50

   20 exprlist: exprlist . ',' exprlist
   21         | exprlist . '[' exprlist ']'
   22         | exprlist . '(' exprlist ')'
   23         | '+' exprlist .
   28         | exprlist . INCR
   29         | exprlist . DECR
   30         | exprlist . '+' exprlist
   31         | exprlist . '-' exprlist
   32         | exprlist . '<' exprlist
   33         | exprlist . LE exprlist
   34         | exprlist . '>' exprlist
   35         | exprlist . GE exprlist
   36         | exprlist . EQ exprlist
   37         | exprlist . NE exprlist
   38         | exprlist . AND exprlist
   39         | exprlist . OR exprlist
   40         | exprlist . '=' exprlist
   41         | exprlist . ADDMOV exprlist
   42         | exprlist . SUBMOV exprlist

    ','  shift, and go to state 73
    '['  shift, and go to state 74
    '('  shift, and go to state 75

    ','       [reduce using rule 23 (exprlist)]
    '['       [reduce using rule 23 (exprlist)]
    '('       [reduce using rule 23 (exprlist)]
    $default  reduce using rule 23 (exprlist)


state 51

   20 exprlist: exprlist . ',' exprlist
   21         | exprlist . '[' exprlist ']'
   22         | exprlist . '(' exprlist ')'
   24         | '-' exprlist .
   28         | exprlist . INCR
   29         | exprlist . DECR
   30         | exprlist . '+' exprlist
   31         | exprlist . '-' exprlist
   32         | exprlist . '<' exprlist
   33         | exprlist . LE exprlist
   34         | exprlist . '>' exprlist
   35         | exprlist . GE exprlist
   36         | exprlist . EQ exprlist
   37         | exprlist . NE exprlist
   38         | exprlist . AND exprlist
   39         | exprlist . OR exprlist
   40         | exprlist . '=' exprlist
   41         | exprlist . ADDMOV exprlist
   42         | exprlist . SUBMOV exprlist

    ','  shift, and go to state 73
    '['  shift, and go to state 74
    '('  shift, and go to state 75

    ','       [reduce using rule 24 (exprlist)]
    '['       [reduce using rule 24 (exprlist)]
    '('       [reduce using rule 24 (exprlist)]
    $default  reduce using rule 24 (exprlist)


state 52

   20 exprlist: exprlist . ',' exprlist
   21         | exprlist . '[' exprlist ']'
   22         | exprlist . '(' exprlist ')'
   27         | DECR exprlist .
   28         | exprlist . INCR
   29         | exprlist . DECR
   30         | exprlist . '+' exprlist
   31         | exprlist . '-' exprlist
   32         | exprlist . '<' exprlist
   33         | exprlist . LE exprlist
   34         | exprlist . '>' exprlist
   35         | exprlist . GE exprlist
   36         | exprlist . EQ exprlist
   37         | exprlist . NE exprlist
   38         | exprlist . AND exprlist
   39         | exprlist . OR exprlist
   40         | exprlist . '=' exprlist
   41         | exprlist . ADDMOV exprlist
   42         | exprlist . SUBMOV exprlist

    ','  shift, and go to state 73
    '['  shift, and go to state 74
    '('  shift, and go to state 75

    ','       [reduce using rule 27 (exprlist)]
    '['       [reduce using rule 27 (exprlist)]
    '('       [reduce using rule 27 (exprlist)]
    $default  reduce using rule 27 (exprlist)


state 53

   20 exprlist: exprlist . ',' exprlist
   21         | exprlist . '[' exprlist ']'
   22         | exprlist . '(' exprlist ')'
   26         | INCR exprlist .
   28         | exprlist . INCR
   29         | exprlist . DECR
   30         | exprlist . '+' exprlist
   31         | exprlist . '-' exprlist
   32         | exprlist . '<' exprlist
   33         | exprlist . LE exprlist
   34         | exprlist . '>' exprlist
   35         | exprlist . GE exprlist
   36         | exprlist . EQ exprlist
   37         | exprlist . NE exprlist
   38         | exprlist . AND exprlist
   39         | exprlist . OR exprlist
   40         | exprlist . '=' exprlist
   41         | exprlist . ADDMOV exprlist
   42         | exprlist . SUBMOV exprlist

    ','  shift, and go to state 73
    '['  shift, and go to state 74
    '('  shift, and go to state 75

    ','       [reduce using rule 26 (exprlist)]
    '['       [reduce using rule 26 (exprlist)]
    '('       [reduce using rule 26 (exprlist)]
    $default  reduce using rule 26 (exprlist)


state 54

   16 statement_list: statement .

    $default  reduce using rule 16 (statement_list)


state 55

   14 statement: '{' statement_list . '}'
   15 statement_list: statement_list . statement

    NAME      shift, and go to state 1
    INTEGER   shift, and go to state 2
    STRING    shift, and go to state 3
    FDEF      shift, and go to state 4
    FDECL     shift, and go to state 5
    VDEF      shift, and go to state 6
    FOR       shift, and go to state 7
    WHILE     shift, and go to state 8
    IF        shift, and go to state 9
    CONTINUE  shift, and go to state 10
    BREAK     shift, and go to state 11
    RETURN    shift, and go to state 12
    YIELD     shift, and go to state 13
    '+'       shift, and go to state 14
    '-'       shift, and go to state 15
    DECR      shift, and go to state 16
    INCR      shift, and go to state 17
    '{'       shift, and go to state 18
    '}'       shift, and go to state 88
    '!'       shift, and go to state 19
    ';'       shift, and go to state 20

    statement           go to state 89
    exprlist            go to state 23
    fdecl_statement     go to state 24
    fdef_statement      go to state 25
    vdef_statement      go to state 26
    if_statement        go to state 27
    for_statement       go to state 28
    while_statement     go to state 29
    return_statement    go to state 30
    continue_statement  go to state 31
    break_statement     go to state 32
    yield_statement     go to state 33
    expr_statement      go to state 34
    blank_statement     go to state 35


state 56

   20 exprlist: exprlist . ',' exprlist
   21         | exprlist . '[' exprlist ']'
   22         | exprlist . '(' exprlist ')'
   25         | '!' exprlist .
   28         | exprlist . INCR
   29         | exprlist . DECR
   30         | exprlist . '+' exprlist
   31         | exprlist . '-' exprlist
   32         | exprlist . '<' exprlist
   33         | exprlist . LE exprlist
   34         | exprlist . '>' exprlist
   35         | exprlist . GE exprlist
   36         | exprlist . EQ exprlist
   37         | exprlist . NE exprlist
   38         | exprlist . AND exprlist
   39         | exprlist . OR exprlist
   40         | exprlist . '=' exprlist
   41         | exprlist . ADDMOV exprlist
   42         | exprlist . SUBMOV exprlist

    ','  shift, and go to state 73
    '['  shift, and go to state 74
    '('  shift, and go to state 75

    ','       [reduce using rule 25 (exprlist)]
    '['       [reduce using rule 25 (exprlist)]
    '('       [reduce using rule 25 (exprlist)]
    $default  reduce using rule 25 (exprlist)


state 57

    0 $accept: program $end .

    $default  accept


state 58

   33 exprlist: exprlist LE . exprlist

    NAME     shift, and go to state 1
    INTEGER  shift, and go to state 2
    STRING   shift, and go to state 3
    '+'      shift, and go to state 14
    '-'      shift, and go to state 15
    DECR     shift, and go to state 16
    INCR     shift, and go to state 17
    '!'      shift, and go to state 19

    exprlist  go to state 90

